contrib/kubernetes/taguette.yml
---
apiVersion: v1
kind: Service
metadata:
  name: taguette
  labels:
    app: taguette
spec:
  ports:
    - port: 7465
      name: web
  selector:
    app: taguette
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taguette
spec:
  selector:
    matchLabels:
      app: taguette
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: taguette
    spec:
      containers:
        - name: taguette
          image: quay.io/remram44/taguette:1.3.0
          args:
            - server
            - /config.py
          ports:
            - containerPort: 7465
              name: web
          volumeMounts:
            - name: config
              mountPath: /config.py
              subPath: config.py
      volumes:
        - name: config
          configMap:
            name: taguette
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taguette
spec:
  rules:
    - host: taguette.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taguette
                port:
                  number: 7465
  tls:
    - hosts:
        - taguette.example.com
